[package]
name = "tic-tac-go"
version = "0.1.0"
edition = "2024"

[dependencies]
# Terminal UI
crossterm = "0.26.1"
ratatui = "0.20.1"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
